--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -13,7 +13,8 @@
     "access": "public"
   },
   "dependencies": {
-    "vue": "^3.0.2"
+    "vue": "^3.0.2",
+    "@lagabu/shared": "latest"
   },
   "peerDependencies": {
     "vue": "^3.0.2"
