--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,21 +15,5 @@ jobs:
         with: 
           persist-credentials: false
 
-      - name: Install & Test
-        run: yarn install && yarn test
-
-      # - name: Build Doc
-      #   run: yarn build:doc
-
-      # - name: Install SSH Client
-      #   uses: webfactory/ssh-agent@v0.2.0 # This step installs the ssh client into the workflow run. There's many options available for this on the action marketplace.
-      #   with:
-      #     ssh-private-key: ${{ secrets.DEPLOY_KEY }}
-
-      # - name: Deploy Github Page
-      #   uses: JamesIves/github-pages-deploy-action@3.6.1
-      #   with:
-      #     BASE_BRANCH: master
-      #     BRANCH: gh-pages
-      #     FOLDER: docs/dist
-      #     SSH: true
+      - name: Install
+        run: yarn install
