--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
-  "private": true,
-  "version": "1.0.0-alpha.0",
+  "name": "ako-ui",
+  "version": "0.1.0-alpha.0",
+  "types": "dist/ako-ui.d.ts",
+  "main": "dist/ako-ui.iife.bundle.js",
+  "module": "dist/ako-ui.es.bundle.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "clean": "node ./scripts/clean.js",
     "test": "jest",
@@ -11,6 +18,7 @@
     "doc:build": "cross-env NODE_ENV=production node ./scripts/docs.js"
   },
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.12.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@types/jest": "^26.0.15",
     "@vue/compiler-sfc": "latest",
@@ -22,7 +30,6 @@
     "jest-cli": "^26.6.3",
     "jest-css-modules": "^2.1.0",
     "jest-serializer-html": "^7.0.0",
-    "less": "^3.12.2",
     "postcss": "^8.1.0",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
@@ -30,9 +37,10 @@
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.29.0",
+    "sass": "^1.30.0",
     "shelljs": "^0.8.3",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.0.5",
+    "typescript": "^4.1.2",
     "vite": "^1.0.0-rc.9",
     "vitepress": "^0.7.3",
     "vue": "next",
