--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -3,6 +3,7 @@
   "main": "dist/card.umd.bundle.js",
   "types": "dist/index.d.ts",
   "module": "dist/card.es.bundle.js",
+  "version": "0.1.0-alpha.0",
   "files": [
     "dist",
     "README.md",
