--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -2,7 +2,7 @@
   "name": "@lagabu/grid",
   "version": "0.1.0-alpha.0",
   "main": "dist/grid.umd.bundle.js",
-  "module": "dist/grid.es.bundle.js",
+  "module": "dist/grid.esm.bundle.js",
   "types": "dist/grid.d.ts",
   "files": [
     "dist",
