--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ next ]
+    branches: [next]
 
 jobs:
   build-and-deploy:
@@ -17,3 +17,19 @@ jobs:
 
       - name: Install
         run: yarn install
+
+      - name: Build docs
+        run: yarn doc:build
+
+      - name: Install SSH Client
+        uses: webfactory/ssh-agent@v0.4.1 # This step installs the ssh client into the workflow run. There's many options available for this on the action marketplace.
+        with:
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+
+      - name: Deploy Github Page
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+          BASE_BRANCH: next
+          BRANCH: gh-pages
+          FOLDER: docs/dist
+          SSH: true
