--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "jest",
     "test:cov": "jest --coverage",
     "build": "cross-env node ./scripts/build.js",
-    "dev": "vite -c vite.config.js",
+    "dev": "vite --config vite.config.js",
     "doc:dev": "cross-env node ./scripts/docs.js",
     "doc:build": "cross-env NODE_ENV=production node ./scripts/docs.js"
   },
@@ -14,7 +14,7 @@
     "@microsoft/api-extractor": "^7.12.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@types/jest": "^26.0.15",
-    "@vue/compiler-sfc": "latest",
+    "@vue/compiler-sfc": "^3.0.5",
     "@vue/test-utils": "next",
     "autoprefixer": "9",
     "cross-env": "^7.0.2",
@@ -34,7 +34,7 @@
     "shelljs": "^0.8.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2",
-    "vite": "^1.0.0-rc.9",
+    "vite": "^1.0.0-rc.13",
     "vitepress": "^0.9.1",
     "vue": "next",
     "vue-router": "next"
