--- a/packages/ako/package.json
+++ b/packages/ako/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0-alpha.0",
   "types": "dist/ako.d.ts",
   "main": "dist/ako.umd.bundle.js",
-  "module": "dist/ako.es.bundle.js",
+  "module": "dist/ako.esm.bundle.js",
   "files": [
     "dist",
     "README.md"
@@ -14,6 +14,7 @@
     "@lagabu/grid": "latest",
     "@lagabu/btn": "latest",
     "@lagabu/card": "latest",
+    "@lagabu/carousel": "latest",
     "@lagabu/theme-default": "latest"
   },
   "peerDependencies": {
