--- a/packages/btn/package.json
+++ b/packages/btn/package.json
@@ -2,7 +2,7 @@
   "name": "@lagabu/btn",
   "main": "dist/btn.umd.bundle.js",
   "types": "dist/index.d.ts",
-  "module": "dist/ako-ui.es.bundle.js",
+  "module": "dist/ako-ui.esm.bundle.js",
   "version": "0.1.0-alpha.0",
   "files": [
     "dist",
