--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ako-ui",
+  "name": "acco",
   "private": true,
   "scripts": {
     "clean": "node ./scripts/clean.js",
@@ -14,14 +14,14 @@
     "@microsoft/api-extractor": "^7.12.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@types/jest": "^26.0.15",
-    "@vue/compiler-sfc": "^3.0.5",
+    "@vitejs/plugin-vue": "^1.0.2",
+    "@vue/compiler-sfc": "^3",
     "@vue/test-utils": "next",
     "autoprefixer": "9",
     "cross-env": "^7.0.2",
     "cssnano": "^4.1.10",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
-    "jest-css-modules": "^2.1.0",
     "jest-serializer-html": "^7.0.0",
     "postcss": "^8.1.0",
     "prettier": "^2.1.2",
@@ -34,10 +34,10 @@
     "shelljs": "^0.8.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2",
-    "vite": "^1.0.0-rc.13",
-    "vitepress": "^0.9.1",
-    "vue": "next",
-    "vue-router": "next"
+    "vite": "^2.0.0-alpha.5",
+    "vitepress": "^0.10.2",
+    "vue": "^3",
+    "vue-router": "^4"
   },
   "peerDependencies": {
     "vue": "next"
