--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [next]
+    branches: [main]
 
 jobs:
   build-and-deploy:
@@ -29,7 +29,7 @@ jobs:
       - name: Deploy Github Page
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
-          BASE_BRANCH: next
+          BASE_BRANCH: main
           BRANCH: gh-pages
           FOLDER: docs/dist
           SSH: true
