--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "shelljs": "^0.8.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2",
-    "vite": "^2.0.0-alpha.5",
-    "vitepress": "^0.10.2",
+    "vite": "^2.0.0-beta.3",
+    "vitepress": "^0.10.5",
     "vue": "^3",
     "vue-router": "^4"
   },
