--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@vue/compiler-sfc": "^3",
     "@vue/test-utils": "next",
     "autoprefixer": "9",
+    "bootstrap-icons": "^1.3.0",
+    "codecov": "^3.8.1",
     "cross-env": "^7.0.2",
     "cssnano": "^4.1.10",
     "jest": "^26.6.3",
