--- a/packages/btn/package.json
+++ b/packages/btn/package.json
@@ -1,19 +1,23 @@
 {
   "name": "@lagabu/btn",
   "main": "dist/btn.umd.bundle.js",
-  "types": "dist/index.d.ts",
-  "module": "dist/ako-ui.esm.bundle.js",
-  "version": "0.1.0-alpha.0",
+  "module": "dist/btn.esm.bundle.js",
+  "types": "dist/btn.d.ts",
   "files": [
     "dist",
-    "README.md",
-    "dist/index.d.ts"
+    "README.md"
   ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org",
+    "tag": "alpha"
+  },
   "dependencies": {
     "@lagabu/shared": "latest",
     "vue": "next"
   },
   "peerDependencies": {
     "vue": "next"
-  }
+  },
+  "version": "1.0.0-alpha.0"
 }
