feat: publish first alpha version

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Build docs
-        run: yarn doc:build
+        run: yarn build:doc
 
       - name: Install SSH Client
         uses: webfactory/ssh-agent@v0.4.1 # This step installs the ssh client into the workflow run. There's many options available for this on the action marketplace.
