--- a/packages/text-box/package.json
+++ b/packages/text-box/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@lagabu/text-box",
+  "version": "1.0.0-alpha.0",
   "main": "dist/text-box.umd.bundle.js",
   "module": "dist/text-box.esm.bundle.js",
   "types": "dist/text-box.d.bundle.js",
@@ -7,8 +8,16 @@
     "dist",
     "README.md"
   ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org",
+    "tag": "alpha"
+  },
   "dependencies": {
-    "@lagabu/shared": "latest",
+    "@lagabu/shared": "alpha",
+    "vue": "next"
+  },
+  "peerDependencies": {
     "vue": "next"
   }
 }
