--- a/packages/card/package.json
+++ b/packages/card/package.json
@@ -13,7 +13,7 @@
     "tag": "alpha"
   },
   "dependencies": {
-    "@lagabu/shared": "latest",
+    "@lagabu/shared": "alpha",
     "vue": "next"
   },
   "peerDependencies": {
