--- a/packages/list/package.json
+++ b/packages/list/package.json
@@ -1,3 +1,24 @@
 {
-  "name": "@lagabu/list"
+  "name": "@lagabu/list",
+  "version": "1.0.0-alpha.0",
+  "main": "dist/list.umd.bundle.js",
+  "module": "dist/list.esm.bundle.js",
+  "types": "dist/list.d.ts",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org",
+    "tag": "alpha"
+  },
+  "dependencies": {
+    "vue": "next",
+    "@lagabu/shared": "alpha"
+  },
+  "peerDependencies": {
+    "vue": "next"
+  }
+
 }
