--- a/packages/text-input/package.json
+++ b/packages/text-input/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@lagabu/text-input",
+  "version": "1.0.0-alpha.0",
   "types": "dist/text-input.d.ts",
   "main": "dist/text-input.umd.bundle.js",
   "module": "dist/text-input.esm.bundle.js",
@@ -7,8 +8,13 @@
     "dist",
     "README.md"
   ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org",
+    "tag": "alpha"
+  },
   "dependencies": {
-    "@lagabu/shared": "latest",
+    "@lagabu/shared": "alpha",
     "vue": "next"
   },
   "peerDependencies": {
