--- a/packages/carousel/package.json
+++ b/packages/carousel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lagabu/carousel",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0-alpha.1",
   "types": "dist/carousel.d.ts",
   "main": "dist/carousel.umd.bundle.js",
   "module": "dist/carousel.esm.bundle.js",
@@ -14,10 +14,10 @@
     "tag": "alpha"
   },
   "dependencies": {
-    "vue": "next",
+    "vue": "^3",
     "@lagabu/shared": "alpha"
   },
   "peerDependencies": {
-    "vue": "next"
+    "vue": "^3"
   }
 }
