--- a/packages/btn/package.json
+++ b/packages/btn/package.json
@@ -14,10 +14,10 @@
   },
   "dependencies": {
     "@lagabu/shared": "alpha",
-    "vue": "next"
+    "vue": "^3"
   },
   "peerDependencies": {
-    "vue": "next"
+    "vue": "^3"
   },
-  "version": "1.0.0-alpha.0"
+  "version": "1.0.0-alpha.1"
 }
